2002-08-22  Tim Coleman <tim@timcoleman.com>
	* XmlSerializationWriter.cs:
		More implementation
	* XmlCustomFormatter.sc:
		Implemented this class.

2002-08-20  Tim Coleman <tim@timcoleman.com>
	* XmlSerializationWriter.cs:
		Some implementation.

2002-08-19  Tim Coleman <tim@timcoleman.com>
	* XmlSerializer.cs:
		New stubs added.
	* XmlSerializationWriter.cs:
		New stubs added.

2002-08-14  Tim Coleman <tim@timcoleman.com>
	* XmlSerializer.cs:
		More reformatting of source code so I can
		better understand what it does.

2002-08-06  Tim Coleman <tim@timcoleman.com>
	* XmlSerializer.cs:
		Some reformatting of code for readability.
		Modify to correctly serialize ICollection objects
		such as the BindingCollection of a ServiceDescription
		for example.

2002-08-03  Tim Coleman <tim@timcoleman.com>
	* XmlSerializer.cs: 
		Changed Implements() to check based on name rather
		than FullName.  FullName was never working correctly.

2002-07-26  Tim Coleman <tim@timcoleman.com>
	* XmlSerializer.cs:
		The constructor now looks for an XmlRootAttribute attribute
		if one is not passed in.  Various changes to make it emit
		proper XML, such as handling an element without a namespace
		prefix, and using WriteEndDocument where it should be.

2002-07-24  Tim Coleman <tim@timcoleman.com>
	* CodeIdentifier.cs:
	* IXmlSerializable.cs:
	* XmlSerializationCollectionFixupCallback.cs:
	* XmlSerializationFixupCallback.cs:
	* XmlSerializationReadCallback.cs:
	* XmlSerializationReader.cs:
	* XmlSerializationWriteCallback.cs:
		Add new classes.
	* XmlSchemas.cs
	* CodeIdentifiers.cs:
		Implement some of these classes
	* XmlCodeExporter.cs:
		Fix return type of a function

2002-07-24  Tim Coleman <tim@timcoleman.com>
	* SoapReflectionImporter.cs:
		New class added to build
		System.Web.Services.Description.ServiceDescription.cs

2002-07-22  Tim Coleman <tim@timcoleman.com>
	* CodeIdentifiers.cs:
	* SoapCodeExporter.cs:
	* SoapSchemaExporter.cs:
	* XmlCodeExporter.cs:
	* XmlMemberMapping.cs: